--- a/server/package.json
+++ b/server/package.json
@@ -9,16 +9,25 @@
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0"
   },
+  "scripts": {
+    "start": "bun run index.ts",
+    "dev": "bun --watch run index.ts",
+    "dev:worker": "bun --watch run worker.ts"
+  },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.21",
+    "@langchain/community": "^0.3.51",
+    "@langchain/core": "^0.3.71",
     "@langchain/mistralai": "^0.2.1",
     "@langchain/qdrant": "^0.1.3",
     "@mistralai/mistralai": "^1.9.17",
     "bullmq": "^5.58.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1"
   }
 }
