--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "streamdown": "^1.0.11",
     "tailwind-merge": "^3.3.1"
   },
