--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@clerk/express": "^1.7.21",
     "@langchain/community": "^0.3.51",
-    "@langchain/core": "^0.3.71",
+    "@langchain/core": "^0.3.72",
+    "@langchain/langgraph": "^0.4.8",
     "@langchain/mistralai": "^0.2.1",
     "@langchain/qdrant": "^0.1.3",
     "@mistralai/mistralai": "^1.9.17",
