--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@clerk/express": "^1.7.21",
     "@langchain/community": "^0.3.51",
     "@langchain/core": "^0.3.72",
+    "@langchain/google-genai": "^0.2.17",
     "@langchain/langgraph": "^0.4.8",
     "@langchain/mistralai": "^0.2.1",
     "@langchain/qdrant": "^0.1.3",
