--- a/server/package.json
+++ b/server/package.json
@@ -32,11 +32,13 @@
     "@mistralai/mistralai": "^1.9.17",
     "bullmq": "^5.58.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "pdf-parse": "^1.1.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7"
   }
 }
