--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@langchain/qdrant": "^0.1.3",
     "@mistralai/mistralai": "^1.9.17",
     "@upstash/qstash": "^2.8.2",
+    "aws-sdk": "^2.1692.0",
     "bullmq": "^5.58.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
