--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/multer": "^2.0.0",
-    "cross-env": "^10.0.0"
+    "@types/multer": "^2.0.0"
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target bun",
@@ -36,13 +35,11 @@
     "bullmq": "^5.58.0",
     "chromadb": "^3.0.14",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "pdf-parse": "^1.1.1",
-    "pg": "^8.16.3",
     "postgres": "^3.4.7"
   }
 }
