--- a/server/package.json
+++ b/server/package.json
@@ -28,12 +28,12 @@
     "@langchain/google-genai": "^0.2.17",
     "@langchain/langgraph": "^0.4.8",
     "@langchain/mistralai": "^0.2.1",
+    "@langchain/pinecone": "^0.2.0",
     "@langchain/qdrant": "^0.1.3",
     "@mistralai/mistralai": "^1.9.17",
     "@upstash/qstash": "^2.8.2",
     "aws-sdk": "^2.1692.0",
     "bullmq": "^5.58.0",
-    "chromadb": "^3.0.14",
     "cors": "^2.8.5",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
